Replaced the WebJob with two azure functions

--- a/CasusRegistratie/Views/Account/AccountOverView.cshtml
+++ b/CasusRegistratie/Views/Account/AccountOverView.cshtml
@@ -22,7 +22,7 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            <img src="@Url.Content("https://csb10032000cd952116.blob.core.windows.net/photos/" + item.Thumbnail)" />
+            <img src="@Url.Content("https://csb10032000cd952116.blob.core.windows.net/thumbnails/" + item.Thumbnail)" />
         </td>
     </tr>
 }
